apps/n8n/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  labels:
    app: n8n
spec:
  finalizers:
    - kubernetes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: n8n
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - port: 5432

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:latest
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: n8n
spec:
  type: ClusterIP
  selector:
    app: n8n
  ports:
    - port: 5678

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
  labels:
    app: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.apps.lab.lan`)
      kind: Rule
      services:
        - name: n8n-service
          port: 5678
